# datascience-starter

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  build_docs.bash  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
docs/: build  build.bash  conf.py  datascience_starter.base.rst  datascience_starter.feature_engineering.rst  datascience_starter.models.glm.rst  datascience_starter.models.nlp.rst  datascience_starter.rst  index.rst  modules.rst
docs/src/: datascience_starter.io.rst  datascience_starter.model_selection.rst  datascience_starter.models.rst  datascience_starter.models.timeseries.rst  datascience_starter.processing.rst  datascience_starter.rst  modules.rst
ds/dataset/: gridsearchcv.py
ds/io/: __init__.py  async_fetch.py
ds/models/glm/: bayesian_glm.py
ds/models/timeseries/: __init__.py
ds/processing/: __init__.py  base.py  processors.py
ds/utils/: matching.py
notebooks/: demo.ipynb  glm_demo.ipynb  logistic_regression_glm.ipynb
src/: requirements.txt
src/datascience_starter/: base.py  feature_engineering.py  sampling.py  utils.py
src/datascience_starter/base/: __init__.py  estimators.py  logging.py
src/io/: AsyncFetch.py  Excel.py
src/transformations/: rbf.py
starter_pack/core/: base.py
starter_pack/dataset/: base.py
starter_pack/io/: __init__.py  excel.py
starter_pack/models/: base.py
starter_pack/processing/: base.py  processors.py
starter_pack/utils/: sampling.py  text_extractor.py
tests/: runner.py
tests/unit_tests/: test_something.py
(+25 files in other folders)
